--- a/Work/ManipulateDatawithSQLAlchemy/WRByYear.ipynb
+++ b/Work/ManipulateDatawithSQLAlchemy/WRByYear.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class FantasyFootball(Base):\n",
+    "class FantasyFootball(Base): #import data table \n",
     "    __tablename__ = 'fantasydata'\n",
     "    \n",
     "    id = Column(Integer, primary_key=True)\n",
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = create_engine('sqlite:///football.db')\n",
+    "engine = create_engine('sqlite:///football.db') #ensure correct data is being used \n",
     "Base.metadata.create_all(engine)"
    ]
   },
@@ -86,7 +86,8 @@
     "results = session.query(FantasyFootball.Name, FantasyFootball.Year, func.sum(FantasyFootball.FantasyPoints).label('Fantasy_Points'),func.sum(FantasyFootball.ReceivingYards).label('Receiving_Yards'),func.sum(FantasyFootball.ReceivingTDs).label('Receiving_TDs'),func.sum(FantasyFootball.Receptions).label('Receptions')) \\\n",
     "                 .filter(FantasyFootball.Position == 'WR') \\\n",
     "                 .group_by(FantasyFootball.Name, FantasyFootball.Year).order_by(FantasyFootball.Name,FantasyFootball.Year) \\\n",
-    "                 .all()"
+    "                 .all()\n",
+    "#query data to find yearly stats"
    ]
   },
   {
@@ -1107,7 +1108,8 @@
     }
    ],
    "source": [
-    "results"
+    "results\n",
+    "#check to see if it worked "
    ]
   },
   {
