--- a/Work/ManipulateDatawithSQLAlchemy/HBLast5.ipynb
+++ b/Work/ManipulateDatawithSQLAlchemy/HBLast5.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class FantasyFootball(Base):\n",
+    "class FantasyFootball(Base): #import table from database\n",
     "    __tablename__ = 'fantasydata'\n",
     "    \n",
     "    id = Column(Integer, primary_key=True)\n",
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = create_engine('sqlite:///football.db')\n",
+    "engine = create_engine('sqlite:///football.db') #import the right data \n",
     "Base.metadata.create_all(engine)"
    ]
   },
@@ -87,7 +87,7 @@
     "results = session.query(FantasyFootball.Name, FantasyFootball.Year, FantasyFootball.Week, FantasyFootball.FantasyPoints, FantasyFootball.RushYards, FantasyFootball.RushTDs, FantasyFootball.ReceivingYards, FantasyFootball.ReceivingTDs) \\\n",
     "                 .filter(FantasyFootball.Position == 'RB') \\\n",
     "                 .order_by(FantasyFootball.Name) \\\n",
-    "                 .all()"
+    "                 .all() #create a query to pull indiviual games "
    ]
   },
   {
@@ -1108,7 +1108,7 @@
     }
    ],
    "source": [
-    "results"
+    "results #make sure that it worked "
    ]
   },
   {
@@ -1138,7 +1138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for game in reversed(results):\n",
+    "for game in reversed(results): #create a dictionary containing the last 5 games \n",
     "    Name, Year, Week, FantasyPoints, RushYards, RushTDs, ReceivingYards,ReceivingTDs = game[:8]\n",
     "    if len(RB_last_5_games[Name])<5:\n",
     "        RB_last_5_games[Name].append(game) \n",
@@ -2482,7 +2482,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RBlast5 = {'Zonovan Knight': [('Zonovan Knight', '2023', '5.0', '1.0', '0', '0', '8.0', '0.0'),\n",
+    "#get rid of defauldict part so you can upload into json\n",
+    "RBlast5 = {'Zonovan Knight': [('Zonovan Knight', '2023', '5.0', '1.0', '0', '0', '8.0', '0.0'), \n",
     "              ('Zonovan Knight', '2023', '3.0', '1.0', '13', '0', '0.0', '0.0'),\n",
     "              ('Zonovan Knight', '2022', '18.0', '2.0', '22', '0', '0.0', '0.0'),\n",
     "              ('Zonovan Knight', '2022', '17.0', '5.0', '27', '0', '17.0', '0.0'),\n",
