--- a/Work/ManipulateDatawithSQLAlchemy/WRLast5.ipynb
+++ b/Work/ManipulateDatawithSQLAlchemy/WRLast5.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class FantasyFootball(Base):\n",
+    "class FantasyFootball(Base): #import data table \n",
     "    __tablename__ = 'fantasydata'\n",
     "    \n",
     "    id = Column(Integer, primary_key=True)\n",
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = create_engine('sqlite:///footballupdate.db')\n",
+    "engine = create_engine('sqlite:///footballupdate.db') #ensure correct data is updated \n",
     "Base.metadata.create_all(engine)"
    ]
   },
@@ -86,7 +86,8 @@
     "results = session.query(FantasyFootball.Name, FantasyFootball.Year, FantasyFootball.Week, FantasyFootball.FantasyPoints, FantasyFootball.Receptions, FantasyFootball.ReceivingYards, FantasyFootball.ReceivingTDs) \\\n",
     "                 .filter(FantasyFootball.Position == 'WR') \\\n",
     "                 .order_by(FantasyFootball.Name) \\\n",
-    "                 .all()"
+    "                 .all()\n",
+    "#query for game data "
    ]
   },
   {
@@ -116,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for game in reversed(results): \n",
+    "for game in reversed(results): #create dictionary of only the last 5 games \n",
     "    Name, Year, Week , Receptions, ReceivingYards,ReceivingTDs = game[:6]\n",
     "    if len(WR_last_5_games[Name])<5:\n",
     "        WR_last_5_games[Name].append(game) \n",
@@ -1872,6 +1873,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#get rid of defaultdict part \n",
     "WRlast5 =  {'Zay Jones': [('Zay Jones', '2023', '18.0', '10.0', '6.0', '47.0', '0.0'),\n",
     "              ('Zay Jones', '2023', '15.0', '10.0', '5.0', '59.0', '0.0'),\n",
     "              ('Zay Jones', '2023', '14.0', '7.0', '5.0', '29.0', '0.0'),\n",
